--- a/index.html
+++ b/index.html
@@ -288,4 +288,85 @@
                         resultItem.className = 'result-item incorrect';
                         resultItem.innerHTML = `
                             <p>HS 부호: ${result.questionCode}</p>
-                            <p>선택한 답: ${result.selectedAnswer}</
+                            <p>선택한 답: ${result.selectedAnswer}</p>
+                            <p>정답: ${result.correctAnswer}</p>
+                        `;
+                        resultsList.appendChild(resultItem);
+                    }
+                });
+            }
+
+            saveIncorrectAnswers();
+        }
+
+        function showScreen(screenId) {
+            document.querySelectorAll('.screen').forEach(screen => 
+                screen.classList.remove('active'));
+            document.getElementById(screenId).classList.add('active');
+        }
+
+        function startQuiz() {
+            currentQuestions = generateQuestions();
+            currentQuestionIndex = 0;
+            results = [];
+            
+            showScreen('quizScreen');
+            showQuestion();
+        }
+
+        function retryIncorrect() {
+            const incorrectQuestions = loadIncorrectAnswers();
+            if (incorrectQuestions.length === 0) {
+                alert('오답 노트에 저장된 문제가 없습니다.');
+                return;
+            }
+            currentQuestions = incorrectQuestions;
+            currentQuestionIndex = 0;
+            results = [];
+            
+            showScreen('quizScreen');
+            showQuestion();
+        }
+
+        async function captureScreen() {
+            try {
+                const canvas = await html2canvas(document.querySelector("#resultsScreen"));
+                const link = document.createElement("a");
+                link.href = canvas.toDataURL("image/png");
+                link.download = "HS마스터_퀴즈결과.png";
+                link.click();
+            } catch (error) {
+                alert('화면 캡처 중 오류가 발생했습니다.');
+                console.error('캡처 에러:', error);
+            }
+        }
+
+        async function captureIncorrect() {
+            try {
+                const incorrectSection = document.createElement('div');
+                incorrectSection.innerHTML = '<h3>틀린 문제</h3>';
+                results.filter(r => !r.correct).forEach(result => {
+                    const resultItem = document.createElement('div');
+                    resultItem.className = 'result-item incorrect';
+                    resultItem.innerHTML = `
+                        <p>HS 부호: ${result.questionCode}</p>
+                        <p>선택한 답: ${result.selectedAnswer}</p>
+                        <p>정답: ${result.correctAnswer}</p>
+                    `;
+                    incorrectSection.appendChild(resultItem);
+                });
+                document.body.appendChild(incorrectSection);
+                const canvas = await html2canvas(incorrectSection);
+                document.body.removeChild(incorrectSection);
+                const link = document.createElement("a");
+                link.href = canvas.toDataURL("image/png");
+                link.download = "HS마스터_틀린문제.png";
+                link.click();
+            } catch (error) {
+                alert('화면 캡처 중 오류가 발생했습니다.');
+                console.error('캡처 에러:', error);
+            }
+        }
+    </script>
+</body>
+</html>
