--- a/index.html
+++ b/index.html
@@ -101,11 +101,17 @@
 </head>
 <body>
     <div class="container">
-        <div id="startScreen" class="screen active">
+        <div id="loginScreen" class="screen active">
             <h1>HS마스터</h1>
             <p>HS부호를 보고 한글품목명을 맞추는 퀴즈입니다. 총 10문제가 출제됩니다.</p>
             <label for="userId">이용자 ID를 입력하세요:</label>
             <input type="text" id="userId" placeholder="이용자 ID">
+            <div id="error-message" aria-live="assertive"></div>
+            <button class="btn" onclick="login()" id="loginButton">로그인</button>
+        </div>
+
+        <div id="startScreen" class="screen">
+            <h1>HS마스터</h1>
             <div id="loadingText" class="loading">데이터를 불러오는 중...</div>
             <div id="error-message" aria-live="assertive"></div>
             <button class="btn" onclick="startQuiz()" disabled id="startButton">시작하기</button>
@@ -146,14 +152,26 @@
         let results = [];
         let userId = '';
 
-        // 사용자 ID 설정
-        function setUserId() {
+        // 로그인
+        function login() {
             const inputId = document.getElementById('userId').value.trim();
             if (inputId === '') {
                 alert('이용자 ID를 입력해 주세요.');
-                return false;
+                return;
             }
             userId = inputId;
+
+            document.getElementById('loginScreen').classList.remove('active');
+            document.getElementById('startScreen').classList.add('active');
+            loadCSVData();
+        }
+
+        // 사용자 ID 설정
+        function setUserId() {
+            if (userId === '') {
+                alert('이용자 ID를 입력해 주세요.');
+                return false;
+            }
             return true;
         }
 
@@ -240,8 +258,6 @@
                 console.error('CSV 로드 에러:', error);
             }
         }
-
-        window.onload = loadCSVData;
 
         function shuffleArray(array) {
             for (let i = array.length - 1; i > 0; i--) {
