--- a/index.html
+++ b/index.html
@@ -534,21 +534,24 @@
         }
 
         function retryCorrect() {
-            const correctAnswers = loadCorrectAnswers();
-            if (correctAnswers.length === 0) {
-                alert('맞춘 문제가 없습니다.');
-                return;
-            }
-            const data = hsData.filter(item => correctAnswers.some(ca => ca.questionCode === item.code));
-            if (data.length === 0) {
-                alert('맞춘 문제가 없습니다.');
-                return;
-            }
-            currentQuestions = generateQuestions(data, data.length); // data.length 사용
-            currentQuestionIndex = 0;
-            results = [];
-            showQuestion();
-            showScreen('quizScreen');
+          const correctAnswers = loadCorrectAnswers();
+          if (correctAnswers.length === 0) {
+            alert('맞춘 문제가 없습니다.');
+            return;
+          }
+          const data = hsData.filter(item => correctAnswers.some(ca => ca.questionCode === item.code));
+          
+          // data.length가 0인 경우 예외 처리
+          if (data.length === 0) { 
+            alert('맞춘 문제 데이터를 찾을 수 없습니다.'); 
+            return; 
+          }
+        
+          currentQuestions = generateQuestions(data, data.length); 
+          currentQuestionIndex = 0;
+          results = [];
+          showQuestion();
+          showScreen('quizScreen');
         }
 
 
