--- a/index.html
+++ b/index.html
@@ -268,12 +268,12 @@
                 const lines = csvText.split('\n');
                 hsData.length = 0;
                 lines.slice(1).forEach(line => {
-                    // 쉼표를 포함한 필드 처리를 위해 정규표현식 사용
+                    // 쉼표를 포함한 필드를 제대로 처리하기 위해 정규표현식 사용
                     const match = line.match(/(".*?"|[^",\s]+)(?=\s*,|\s*$)/g);
                     if (match && match.length >= 2) {
                         const code = match[0].replace(/^"|"$/g, '').trim();
                         const name = match[1].replace(/^"|"$/g, '').trim();
-                        if (name !== '기타') {
+                        if (name !== '기타') { // '기타'인 항목은 제외
                             hsData.push({ code, name });
                         }
                     }
@@ -292,6 +292,7 @@
                 console.error('Error loading CSV:', error);
             }
         }
+
 
 
         function updateMenuVisibility() {
