--- a/index.html
+++ b/index.html
@@ -262,34 +262,37 @@
         }
 
         async function loadHsCodeData() {
-        try {
-            const response = await fetch('hscode.csv');
-            const csvText = await response.text();
-            const data = Papa.parse(csvText, {
-                header: false,
-                skipEmptyLines: true,
-            });
-
-            hsData.length = 0;
-            data.data.forEach(item => {
-                if (item.name && item.name !== '기타') {
-                    hsData.push({ code: item.code, name: item.name });
-                }
-            });
-
-            document.getElementById('startButton').disabled = false;
-            document.getElementById('loadingText').style.display = 'none';
-            updateMenuVisibility();
-        } catch (error) {
-            document.getElementById('loadingText').textContent = '데이터를 불러오는데 실패했습니다. 다시 시도해 주세요.';
-            const retryButton = document.createElement('button');
-            retryButton.textContent = '재시도';
-            retryButton.className = 'btn';
-            retryButton.onclick = loadHsCodeData;
-            document.getElementById('startScreen').appendChild(retryButton);
-            console.error('Error loading CSV:', error);
+            try {
+                const response = await fetch('hscode.csv');
+                const csvText = await response.text();
+                const lines = csvText.split('\n').map(line => line.trim());
+        
+                hsData.length = 0;
+                lines.slice(1).forEach(line => {
+                    const fields = line.split(',');
+                    if (fields.length >= 2) {
+                        const code = fields[0].trim();
+                        const name = fields[1].trim();
+                        if (name !== '기타') {
+                            hsData.push({ code, name });
+                        }
+                    }
+                });
+        
+                document.getElementById('startButton').disabled = false;
+                document.getElementById('loadingText').style.display = 'none';
+                updateMenuVisibility();
+            } catch (error) {
+                document.getElementById('loadingText').textContent = '데이터를 불러오는데 실패했습니다. 다시 시도해 주세요.';
+                const retryButton = document.createElement('button');
+                retryButton.textContent = '재시도';
+                retryButton.className = 'btn';
+                retryButton.onclick = loadHsCodeData;
+                document.getElementById('startScreen').appendChild(retryButton);
+                console.error('Error loading CSV:', error);
+            }
         }
-    }
+
 
 
         function updateMenuVisibility() {
