--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@
                 }
             });
 
-            localStorage.setItem(${userId}_correctAnswers, JSON.stringify(updated));
-        }
+            localStorage.setItem(userId + '_correctAnswers', JSON.stringify(updated)); 
+            }
 
         function saveIncorrectResponses() {
             if (!userId) return;
@@ -487,8 +487,8 @@
                 }
             });
         
-            localStorage.setItem(${userId}_incorrectAnswers, JSON.stringify(updated));
-        }
+            localStorage.setItem(userId + '_incorrectAnswers', JSON.stringify(updated)); 
+            }
         function loadCorrectAnswers() {
             if (!userId) return [];
             const stored = localStorage.getItem(${userId}_correctAnswers);
