--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     </div>
 
     <!-- 스크립트 부분 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script>
         const hsData = [];
         let currentQuestions = [];
