--- a/index.html
+++ b/index.html
@@ -267,9 +267,10 @@
         
                 const lines = csvText.split('\n');
                 hsData.length = 0;
+        
                 lines.slice(1).forEach(line => {
-                    // 쉼표를 포함한 필드 처리를 위해 정규표현식 사용
-                    const match = line.match(/(".*?"|[^",\s]+)(?=\s*,|\s*$)/g);
+                    // 인용부호와 쉼표를 올바르게 처리하기 위해 정규 표현식을 수정
+                    const match = line.match(/("(?:[^"]|"")*"|[^",\s]+)(?=\s*,|\s*$)/g);
                     if (match && match.length >= 2) {
                         const code = match[0].replace(/^"|"$/g, '').trim();
                         const name = match[1].replace(/^"|"$/g, '').trim();
